k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentrix
  labels:
    name: sentrix
    environment: production
